--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -16,6 +16,7 @@
 @import "arguments";
 @import "comments";
 @import "events";
+@import "articles";
 @import "social-share-button";
 @import "simpletextrotator";
 
