--- a/app/views/shared/_home_badge4.html.erb
+++ b/app/views/shared/_home_badge4.html.erb
@@ -4,7 +4,8 @@
 			<div id="title">
 				
 				<div class="row" id="encemoment">
-					<div class="title">EN CE MOMENT SUR MOUTONERS ...</div>
+					<%= image_tag("fleche-gauche.png", class: "flecheback")%>
+					<span class="title">EN CE MOMENT SUR MOUTONERS ...</span>
 				</div>
 				
 				<div class="row">
