--- a/app/views/shared/_challenge_badge.html.erb
+++ b/app/views/shared/_challenge_badge.html.erb
@@ -1,78 +1,9 @@
-<section id="challenge-badge">
-  		<div class="row">
-
-			<div class="span6" id="challenge-badge1">
-
-				<% if challenge.type_deb == 2%>
-					<%= link_to image_tag("image-ld-01.png"), challenge, class: "image"%>
-				<%elsif challenge.type_deb == 3 %>
-					<%= link_to image_tag("vintage.jaune1-01.png"), challenge, class: "image"%>
-				<%elsif challenge.type_deb == 4 %>
-					<%= link_to image_tag("2048(01)-01.png"), challenge, class: "image"%>
-				<%elsif challenge.type_deb == 8 %>
-					<%= link_to image_tag("british-01-01.png"), challenge, class: "image"%>
-				<%end%>
-				
-				<div class="row">
-					<div class="span1" id="challenge-badge2">
-						<%= image_tag("signe-defi.png", alt: "Moutoners")%>
-					</div>
-					<div class="banniere">
-						<% if challenge.type_deb == 2%>
-							<%= image_tag("banniere-1vs1.png", class: "image")%>
-						<%elsif challenge.type_deb == 3 %>
-							<%= image_tag("banniere-2vs2.png", class: "image")%>
-						<%elsif challenge.type_deb == 4 %>
-							<%= image_tag("banniere-4vs1.png", class: "image")%>
-						<%elsif challenge.type_deb == 8 %>
-							<%= image_tag("banniere-4vs3.png", class: "image")%>
-						<%end%>
-
-					</div>
-					<div class="span4">
-						<div class="texte">
-							<%= link_to (image_tag("text-badge.png", alt: "Moutoners", class: "image")), challenge%>
-							<div class="title">
-	    						<%= link_to challenge.title, challenge, class: "title2"%>
-							</div>
-						</div>
-					</div>
-					
-				</div>
-			</div>
-
-			<div class="span2">
-				<div class="follow">
-				<% if current_user && current_user.following?(challenge)%>
-					<div class="texte2"><%= link_to"Fuir", unfollow_challenge_path(challenge), class: "texte"%></div>
-				<% else %>
-					<div class="texte"><%= link_to"Suivre", follow_challenge_path(challenge), class: "texte"%></div>
-				<% end %>
-					<div class="arrow-left"></div>
-				</div>
-				<div class="categorie">
-					<div class="arrow-left"></div>
-					<div class="image">
-					<% if challenge.cat_id == 1 %>
-						<%= link_to image_tag("cat-sports.png", :alt => 'Moutoners'), list_path(:cat => 1)%>
-					<%elsif challenge.cat_id == 2 %>
-						<%= link_to image_tag("cat-quotidien.png", :alt => 'Moutoners'), list_path(:cat => 2)%>
-					<%elsif challenge.cat_id == 3 %>
-						<%= link_to image_tag("cat-monde.png", :alt => 'Moutoners'), list_path(:cat => 3)%>
-					<%elsif challenge.cat_id == 4 %>
-						<%= link_to image_tag("cat-economie.png", :alt => 'Moutoners'), list_path(:cat => 4)%>
-					<%elsif challenge.cat_id == 5 %>
-						<%= link_to image_tag("cat-culture.png", :alt => 'Moutoners'), list_path(:cat => 5)%>
-					<%elsif challenge.cat_id == 6 %>
-					 	<%= link_to image_tag("cat-sciences.png", :alt => 'Moutoners'), list_path(:cat => 6)%>
-					<%elsif challenge.cat_id == 7 %>
-						<%= link_to image_tag("cat-philosophie.png", :alt => 'Moutoners'), list_path(:cat => 7)%>
-					<%elsif challenge.cat_id == 8 %>
-						<%= link_to image_tag("cat-societe.png", :alt => 'Moutoners'), list_path(:cat => 8)%>
-					<%end%>
-					</div>
-				</div>		
-			</div>
-		
-		</div>
-</section>
+<% if challenge.type_deb == 2%>
+	<%= render "shared/lincoln_douglas_badge", challenge: @challenge%>
+<%elsif challenge.type_deb == 3 %>
+	<%= render "shared/american_badge", challenge: @challenge%>
+<%elsif challenge.type_deb == 4 %>
+	<%= render "shared/fc_badge", challenge: @challenge%>
+<%elsif challenge.type_deb == 8 %>
+	<%= render "shared/british_badge", challenge: @challenge%>
+<%end%>
