--- a/app/views/shared/_home_badge.html.erb
+++ b/app/views/shared/_home_badge.html.erb
@@ -4,10 +4,8 @@
 			<div id="title">
 				
 				<div class="row" id="encemoment">
-					<div class="title">EN CE MOMENT SUR MOUTONERS ...</div>
-					<div class="suivant"><div class="text">Débat suivant</div>
-										<%=image_tag("fleche-droite.png", class: "flechehome")%>
-					</div>
+					<span class="title">EN CE MOMENT SUR MOUTONERS ...</span>
+					<%= image_tag("fleche-droite.png", class: "flechehome")%>
 				</div>
 				
 				<div class="row">
