--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -81,7 +81,7 @@
 			<div class="row">
 			
 			<div class="row" id ="openning-comments3">
-				<div class="comment-texte1">Le débat est encore incomplet.</div>
+				<div class="comment-texte1">Le débat ne peut débuter. Il manque <%= @challenge.place_left%> participants.</div>
 			</div>
 			
 			</div>
