--- a/app/views/challenges/_american.html.erb
+++ b/app/views/challenges/_american.html.erb
@@ -112,7 +112,8 @@
 					<div class="row" id="american-milieu-2">
 						<div class='content'><%= h Rinku.auto_link(@challenge.context).gsub(/\n/, '<br/>').html_safe%></div>
 					</div>
-
+					
+					<% unless @challenge.not_full?%>
 					<div class="row" id="american-milieu-3">
 
 							<% if @challenge.position_taken.include?(1) && @challenge.position_taken.include?(3) %>
@@ -159,7 +160,8 @@
 							<%end%>	
 							</div>						
 					</div>
-
+					<% end %>
+					
 					<div class="row" id="american-milieu-4">
 						<div class='blank'></div>
 					</div>
