--- a/app/views/challenges/_british.html.erb
+++ b/app/views/challenges/_british.html.erb
@@ -11,13 +11,10 @@
 						<div class="image2">
 						<% if @challenge.position_taken.include?(1) %>
 							<%= image_tag @challenge.prime_minister.avatar.url(:small), class:"image" %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
 								<%= image_tag("place_vide_petite.png") %>
-								<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%else%>
 								<%= link_to image_tag("place_vide_petite.png"), join_one_challenge_path(:challenge => @challenge), :method => :post %>
-								<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%end%>
 						</div>
 						<div class='first_user'>
@@ -59,14 +56,11 @@
 					<div class="image1">
 						<div class="image2">
 						<% if @challenge.position_taken.include?(3) %>
-							<%= image_tag 'boxe-01.png'%>
-							<%= image_tag @challenge.second_prop.avatar.url(:small), class: "image4" %>
+							<%= image_tag @challenge.second_prop.avatar.url(:small), class: "image3" %>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag 'boxe-01.png'%>
-								<%= image_tag("place_vide_petite.png", class: "image4") %>
+								<%= image_tag("place_vide_petite.png", class: "image3") %>
 							<%else%>
-								<%= image_tag 'boxe-01.png'%>
-								<%= link_to image_tag("place_vide_petite.png", class: "image4"), join_three_challenge_path(:challenge => @challenge), :method => :post %>
+								<%= link_to image_tag("place_vide_petite.png", class: "image3"), join_three_challenge_path(:challenge => @challenge), :method => :post %>
 							<%end%>
 						</div>
 						<div class='second_user'>
@@ -113,13 +107,10 @@
 						<div class="image2">
 						<% if @challenge.position_taken.include?(5) %>
 							<%= image_tag @challenge.third_prop.avatar.url(:small), class:"image" %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag("place_vide_petite.png") %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>								
+								<%= image_tag("place_vide_petite.png") %>							
 							<%else%>
-								<%= link_to image_tag("place_vide_petite.png"), join_five_challenge_path(:challenge => @challenge), :method => :post %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>								
+								<%= link_to image_tag("place_vide_petite.png"), join_five_challenge_path(:challenge => @challenge), :method => :post %>							
 							<%end%>
 						</div>
 						<div class='first_user'>
@@ -162,14 +153,11 @@
 						<div class="image1">
 							<div class="image2">
 							<% if @challenge.position_taken.include?(7) %>
-								<%= image_tag 'boxe-01.png'%>
-								<%= image_tag @challenge.fourth_prop.avatar.url(:small), class: "image4" %>
-								<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag 'boxe-01.png'%>								
-									<%= image_tag("place_vide_petite.png", class: " image4") %>
-								<%else%>
-								<%= image_tag 'boxe-01.png'%>								
-									<%= link_to image_tag("place_vide_petite.png", class: "image4"), join_seven_challenge_path(:challenge => @challenge), :method => :post %>
+								<%= image_tag @challenge.fourth_prop.avatar.url(:small), class: "image3" %>
+								<%elsif current_user && current_user.in_challenge?(@challenge)%>		
+									<%= image_tag("place_vide_petite.png", class: " image3") %>
+								<%else%>			
+									<%= link_to image_tag("place_vide_petite.png", class: "image3"), join_seven_challenge_path(:challenge => @challenge), :method => :post %>
 								<%end%>
 							</div>
 							<div class='second_user'>
@@ -231,6 +219,7 @@
 						<div class='content'><%= h Rinku.auto_link(@challenge.context).gsub(/\n/, '<br/>').html_safe%></div>
 					</div>
 
+					<% unless @challenge.not_full?%>
 					<div class="row" id="british-milieu-3-b">
 
 							<% if @challenge.position_taken.include?(1) %>
@@ -278,7 +267,6 @@
 							</div>						
 					</div>
 
-
 					<div class="row" id="british-milieu-3">
 
 							<% if @challenge.position_taken.include?(3) %>
@@ -325,7 +313,7 @@
 							<%end%>	
 							</div>						
 					</div>
-
+					<% end%>
 
 
 
@@ -357,13 +345,10 @@
 						<div class="image2">
 						<% if @challenge.position_taken.include?(2) %>
 							<%= image_tag @challenge.first_opponent.avatar.url(:small), class:"image" %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag("place_vide_petite.png") %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>								
+								<%= image_tag("place_vide_petite.png") %>					
 							<%else%>
 								<%= link_to image_tag("place_vide_petite.png"), join_two_challenge_path(:challenge => @challenge), :method => :post %>
-															<%= image_tag 'boxe-01.png', class: "image4"%>
 							<%end%>
 						</div>
 						<div class='first_user'>
@@ -405,14 +390,11 @@
 					<div class="image1">
 						<div class="image2">
 						<% if @challenge.position_taken.include?(4) %>
-						<%= image_tag 'boxe-01.png'%>
-							<%= image_tag @challenge.second_opp.avatar.url(:small), class: "image4" %>
+							<%= image_tag @challenge.second_opp.avatar.url(:small), class: "image3" %>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-							<%= image_tag 'boxe-01.png'%>
-								<%= image_tag("place_vide_petite.png", class: "image4") %>
+								<%= image_tag("place_vide_petite.png", class: "image3") %>
 							<%else%>
-							<%= image_tag 'boxe-01.png'%>
-								<%= link_to image_tag("place_vide_petite.png", class: "image4"), join_four_challenge_path(:challenge => @challenge), :method => :post %>
+								<%= link_to image_tag("place_vide_petite.png", class: "image3"), join_four_challenge_path(:challenge => @challenge), :method => :post %>
 							<%end%>
 						</div>
 						<div class='second_user'>
@@ -457,14 +439,11 @@
 					<div class="image1">
 						<div class="image2">
 						<% if @challenge.position_taken.include?(6) %>
-							<%= image_tag @challenge.third_opp.avatar.url(:small), class:"image" %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>							
+							<%= image_tag @challenge.third_opp.avatar.url(:small), class:"image" %>						
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag("place_vide_petite.png") %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>								
+								<%= image_tag("place_vide_petite.png") %>						
 							<%else%>
-								<%= link_to image_tag("place_vide_petite.png"), join_six_challenge_path(:challenge => @challenge), :method => :post %>
-							<%= image_tag 'boxe-01.png', class: "image4"%>								
+								<%= link_to image_tag("place_vide_petite.png"), join_six_challenge_path(:challenge => @challenge), :method => :post %>							
 							<%end%>
 						</div>
 						<div class='first_user'>
@@ -506,14 +485,11 @@
 					<div class="image1">
 						<div class="image2">
 						<% if @challenge.position_taken.include?(8) %>
-							<%= image_tag 'boxe-01.png'%>
-							<%= image_tag @challenge.fourth_opp.avatar.url(:small), class: "image4" %>
+							<%= image_tag @challenge.fourth_opp.avatar.url(:small), class: "image3" %>
 							<%elsif current_user && current_user.in_challenge?(@challenge)%>
-								<%= image_tag 'boxe-01.png'%>
-								<%= image_tag("place_vide_petite.png", class: "image4") %>							
+								<%= image_tag("place_vide_petite.png", class: "image3") %>							
 							<%else%>
-								<%= image_tag 'boxe-01.png'%>
-								<%= link_to image_tag("place_vide_petite.png", class: "image4"), join_eight_challenge_path(:challenge => @challenge), :method => :post %>
+								<%= link_to image_tag("place_vide_petite.png", class: "image3"), join_eight_challenge_path(:challenge => @challenge), :method => :post %>
 							<%end%>
 						</div>
 						<div class='second_user'>
