--- a/app/views/challenges/_lincoln_douglas.html.erb
+++ b/app/views/challenges/_lincoln_douglas.html.erb
@@ -73,7 +73,8 @@
 				<div class="row" id="ld-milieu-2">
 					<div class='content'><%= h Rinku.auto_link(@challenge.context).gsub(/\n/, '<br/>').html_safe%></div>
 				</div>
-	
+				
+				<% unless @challenge.not_full?%>
 				<div class="row" id="ld-milieu-3">
 						
 						<% if @challenge.position_taken.include?(1) %>
@@ -118,6 +119,7 @@
 						<%end%>	
 						</div>							
 				</div>
+				<% end %>
 				
 				<div class="row" id="ld-milieu-5">
 					<div class="stat1">
