--- a/app/assets/stylesheets/debates.css.scss
+++ b/app/assets/stylesheets/debates.css.scss
@@ -126,6 +126,7 @@
 			font-family:georgia;
 			font-size:14px;
 			font-style: italic;
+			word-wrap:break-word;
 				.content{
 				padding-bottom:10px;
 				}
