--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -238,6 +238,7 @@ input.ajust-input, textarea.ajust-input {
 			font-style: italic;
 	   	 	font-size:14px;
 	   	 	font-style : italic;
+			word-wrap:break-word;
 	   	 }
 		}
 	}
