--- a/app/assets/stylesheets/application.css.scss.erb
+++ b/app/assets/stylesheets/application.css.scss.erb
@@ -23,11 +23,12 @@
 
 @font-face {
     font-family: 'gotham';
-    src: url(font-path('GothamBlack.eot') + "?#iefix") format('embedded-opentype'),
+    src: url(font-path('Gothamblack.svg') + "#GothamBlack") format('svg'),
+		 url(font-path('GothamBlack.eot') + "?#iefix") format('embedded-opentype'),
          url(font-path('GothamBlack.woff')) format('woff'), 
-         url(font-path('GothamBlack.ttf'))  format('truetype'),
-         url(font-path('Gothamblack.svg') + "#GothamBlack") format('svg');
+         url(font-path('GothamBlack.ttf'))  format('truetype');
 }
+
 
 @font-face {
     font-family: 'gotham-Bold';
